syntax = "proto3";

package mainBack;

option go_package = "diplomPlugBack.mainBack;mainBack";

service mainBack{
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc GetRouts (EmptyRequest) returns (RequestsCount);
}

message EmptyRequest {}

message LoginRequest{
	string login = 1;
	string password = 2;
}

message LoginResponse{
	string access = 1;
	string refresh = 2;	
}

message RequestsCount{
	int32 count = 1;
}